# transfermarkt-api

./: Dockerfile  pyproject.toml
app/: main.py  settings.py
app/api/endpoints/: clubs.py  competitions.py  players.py
app/services/: base.py
app/services/clubs/: players.py
app/utils/: webshare.py
