[project]
name = "transfermarkt-api"
version = "3.0.0"
description = "API service to get data from Transfermarkt"
authors = [
    {name = "Felipe Allegretti", email = "felipe@allegretti.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml==5.3.0",
    "beautifulsoup4==4.12.3",
    "requests==2.32.3",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "slowapi==0.1.9",
    "pydantic-settings==2.7.1",
    "pydantic==2.10.4",
    "python-dateutil==2.9.0.post0",
    "fastapi-cache2>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "jupyter==1.0.0",
    "setuptools==68.2.2",
]
check = [
    "ruff==0.6.1",
    "interrogate==1.7.0",
]
tests = [
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "schema==0.7.5",
]

[tool.ruff]
preview = true
unsafe-fixes = true
line-length = 120
lint.select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "COM",  # flake8-commas
    "Q",  # flake8-quotes
    "FAST",  # fastapi
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --exitfirst"
testpaths = [
    "tests",
]

[tool.interrogate]
ignore-init-module = true
ignore-module = true
fail-under = 100
